# cfear

./: .gitmodules  CMakeLists.txt  main.c
assets/shaders/: default.vert
cengine/: CMakeLists.txt  engine.c  engine.h
cengine/graphics/: mesh.c  mesh.h  renderer.c  renderer.h  shader.c  shader.h  vao.c  vao.h  vbo.c  vbo.h  window.c  window.h
cgame/: CMakeLists.txt  game.c  game.h
clib/: CMakeLists.txt  list.c  list.h  logger.c  logger.h  named_list.c  named_list.h
